vlib/v/checker/tests/option_fn_var_err.vv
module main

type DataFn = fn (name string) string

fn which_lang(name string) string {
	return name
}

fn find_func(name string) ?DataFn {
	return match name {
		'vlang' { which_lang }
		else { none }
	}
}

fn main() {
	req := find_func('vlang')
	fun := req('options')
	println(fun)
}
